<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ceres_vendor</name>
  <version>2.1.0</version>
  <description>ceres 2.1.0</description>
  <maintainer email="ericzhao0325@163.com">ericx</maintainer>
  <license>TODO: License declaration</license>

  <depend>eigen3_vendor</depend>
  <depend>glog_vendor</depend>
  <depend>suitesparse_vendor</depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
