<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>suitesparse_vendor</name>
  <version>7.12.1</version>
  <description>TODO: Package description</description>
  <maintainer email="ericzhao0325@163.com">ericx</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>openblas_vendor</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
