<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_vendor_packages</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ericzhao0325@163.com">ericx</maintainer>
  <license>TODO: License declaration</license>

  <depend>eigen3_vendor</depend>
  <depend>liblz4_vendor</depend>
  <depend>libyaml_vendor</depend>
  <depend>tinyxml2_vendor</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>zstd_vendor</depend>
  <depend>ceres_vendor</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
